workshop04/setup/prom-http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: monitoring
spec:
  hostnames:
  #TODO: Task 1 - change the TRAEFIK_IP to the load balancer IP address
  - prometheus-TRAEFIK_IP.nip.io
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    port: 8000
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-operated
      port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
spec:
  hostnames:
  #TODO: Task 1 - change the TRAEFIK_IP to the load balancer IP address
  - grafana-TRAEFIK_IP.nip.io
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    port: 8000
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prom-stack-grafana
      port: 80
